--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <header>
+        <h1>Fitness</h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </header>
+    <body>
+        
+    </body>
+    <footer>
+        
+    </footer>
 </body>
 </html>
