--- a/index.html
+++ b/index.html
@@ -1,29 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-2</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
+      <section class="head">
         <h1>Fitness</h1>
         <nav>
-            <ul>
-                <li>Home</li>
-                <li>https://github.com/Mamunfx/Assingment-2-repo</li>
-                <li>https://mamunfx.github.io/Assingment-2-repo/</li>
-                <li></li>
-                <li></li>
-            </ul>
+          <ul>
+            <li>Home</li>
+            <li>Service</li>
+            <li>Contac</li>
+            <li>About</li>
+          </ul>
         </nav>
+      </section>
+      <section class="hero">
+        <div class="hero-1st">
+          <h1>Get body in <span>Shape</span> & stay healthy</h1>
+          <p>
+            A huge selection of health and fitness content , healthy recipes and
+            transformation stories to help you get fit and stay fit.
+          </p>
+          <button class="btn">Join Club Now!</button>
+          <button class="btn-2nd">Download App</button>
+        </div>
+        <div class="hero-2nd">
+          <div class="short-1">
+            <h1>500+</h1>
+            <p>Free Workout Videos</p>
+          </div>
+          <div class="short-2">
+            <div class="dot">
+              <button></button>
+            </div>
+            <div class="cont">
+              <h1>350+</h1>
+              <p>Video tutorial</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
     <body>
-        
+      <section class="sec-2">
+        <div class="sec2-title">
+          <h1>Change Your Habits</h1>
+          <p>
+            We believe fitness should be accessible to everyone,everywhere
+            regardless of income or access to a gym.
+          </p>
+        </div>
+        <div class="sec2-cards">
+          <div class="card">
+            <img src="./images/image 3.png" alt="" />
+            <h2>Movement</h2>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="card">
+            <img src="./images/image 2.png" alt="" />
+            <h2>Time</h2>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="card">
+            <img src="./images/image 4.png" alt="" />
+            <h2>practice</h2>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+          <div class="card">
+            <img src="./images/image 5.png" alt="" />
+            <h2>Weight loss</h2>
+            <p>We believe fitness should be accessible to everyone</p>
+          </div>
+        </div>
+      </section>
+      <section class="sec-3">
+        <div class="sec3-left">
+          <h1>Run An Extra Mile Esily</h1>
+          <p>
+            We believe fitness should be accessible to everyone,everywhere
+            regardless of income or access to a gym. With hundreads of
+            professional workouts.
+          </p>
+          <button class="btn">Join Now</button>
+        </div>
+        <img src="./images/run.jpg" alt="" />
+      </section>
+
+      <div class="sec-4-title">
+        <h1>BMI Calculator</h1>
+        <p>
+          We believe fitness should be accessible to everyone,everywhere
+          regardless of income or access to a gym. With hundreads of
+          professional workouts.
+        </p>
+      </div>
+
+      <section class="sec-4">
+        <div class="sec4-left">
+          <h1>BMI Calculator Chart</h1>
+          <table>
+            <thead>
+              <tr>
+                <th>BMI</th>
+                <th>Weight loss</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Below 18.5</td>
+                <td>Underweight</td>
+              </tr>
+              <tr>
+                <td>18.5-24.9</td>
+                <td>Healthy</td>
+              </tr>
+              <tr>
+                <td>25.0-29.9</td>
+                <td>Overweight</td>
+              </tr>
+              <tr>
+                <td>30.0-And above</td>
+                <td>Obese</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="sec4-right">
+          <h1>Calculate Your BMI</h1>
+          <p>
+            We believe fitness should be accessible to everyone,everywhere
+            regardless of income or access to a gym. With hundreads of
+            professional workouts.
+          </p>
+          <div class="input">
+            <input type="text" name="Height" id="" placeholder="Height/cm" />
+            <input type="text" name="Weight" id="" placeholder="Weight/cm" />
+            <input type="number" name="Age" id="" placeholder="Age" />
+            <select name="Sex" id="">
+              <option value="Sex">Sex</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+              <option value="Other">Other</option>
+            </select>
+            <select name="Activity" id="">
+              <option value="">Select an activity factor</option>
+              <option value="">Less Active</option>
+              <option value="">Moderate Active</option>
+              <option value="">Super Active</option>
+            </select>
+          </div>
+          <button class="btn">Calculate</button>
+        </div>
+      </section>
+      <div class="sec-5-title">
+        <h1>Meet Our Team</h1>
+        <p>
+          We believe fitness should be accessible to everyone,everywhere
+          regardless of income or access to a gym.
+        </p>
+      </div>
+      <section class="sec-5">
+        <div class="trainer-1">
+            <h2>Jerome Bell</h2>
+            <p>Trainer</p>
+        </div>
+        <div class="trainer-2">
+            <h2>Cameron Williamson</h2>
+            <p>trainer</p>
+        </div>
+        <div class="trainer-3">
+            <h2>Darrell Steward</h2>
+            <p>trainer</p>
+        </div>
+        <div class="trainer-4">
+            <h2>Dianne Russell</h2>
+            <p>trainer</p>
+        </div>
+        <div class="trainer-5">
+            <h2>Cody Fisher</h2>
+            <p>trainer</p>
+        </div>
+        <div class="trainer-6">
+            <h2>Theresa Webb</h2>
+            <p>trainer</p>
+        </div>
+      </section>
     </body>
     <footer>
-        
+        <div class="foot">
+            <div class="left-foot">
+                <h1>Fitness</h1>
+                <p>
+                    We believe fitness should be accessible to everyone,everywhere
+                    regardless of income or access to a gym. With hundreads of
+                    professional workouts.
+                </p>
+            </div>
+            <div class="middle-foot">
+                <h1>Get Started</h1>
+                <ul>
+                    <li>Service</li>
+                    <li>Contact Us</li>
+                    <li>Affiliate Program</li>
+                    <li>About Us</li>
+                </ul>
+            </div>
+            <div class="right-foot">
+                <h1>Get Started</h1>
+                <ul>
+                    <li>Fitness</li>
+                    <li>Platform</li>
+                    <li>Workout Libary</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
+        </div>
+        <div class="bottom">
+            <hr>
+            <p>
+                All Right Reserved @Fitness 2024
+            </p>
+        </div>
     </footer>
-</body>
+  </body>
 </html>
