--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Assignment-2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="inter-font">
     <header>
       <section class="head">
         <h1>Fitness</h1>
@@ -21,7 +21,7 @@
       </section>
       <section class="hero">
         <div class="hero-1st">
-          <h1>Get body in <span>Shape</span> & stay healthy</h1>
+          <h1>Get body in <span class="dancing-font" >Shape</span> & stay healthy</h1>
           <p>
             A huge selection of health and fitness content , healthy recipes and
             transformation stories to help you get fit and stay fit.
