--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <h1>BMI Calculator</h1>
         <p>
           We believe fitness should be accessible to everyone,everywhere
-          regardless of income or access to a gym. With hundreads of
-          professional workouts.
+          regardless of income or access to a gym.
         </p>
       </div>
 
