--- a/index.html
+++ b/index.html
@@ -100,60 +100,62 @@
       </div>
 
       <section class="sec-4">
-        <div class="sec4-left">
-          <h1>BMI Calculator Chart</h1>
-          <table>
-            <thead>
-              <tr>
-                <th>BMI</th>
-                <th>Weight loss</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Below 18.5</td>
-                <td>Underweight</td>
-              </tr>
-              <tr>
-                <td>18.5-24.9</td>
-                <td>Healthy</td>
-              </tr>
-              <tr>
-                <td>25.0-29.9</td>
-                <td>Overweight</td>
-              </tr>
-              <tr>
-                <td>30.0-And above</td>
-                <td>Obese</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="sec4-right">
-          <h1>Calculate Your BMI</h1>
-          <p>
-            We believe fitness should be accessible to everyone,everywhere
-            regardless of income or access to a gym. With hundreads of
-            professional workouts.
-          </p>
-          <div class="input">
-            <input type="text" name="Height" id="" placeholder="Height/cm" />
-            <input type="text" name="Weight" id="" placeholder="Weight/cm" />
-            <input type="number" name="Age" id="" placeholder="Age" />
-            <select name="Sex" id="">
-              <option value="Sex">Sex</option>
-              <option value="Male">Male</option>
-              <option value="Female">Female</option>
-              <option value="Other">Other</option>
-            </select>
-            <select name="Activity" id="">
-              <option value="">Select an activity factor</option>
-              <option value="">Less Active</option>
-              <option value="">Moderate Active</option>
-              <option value="">Super Active</option>
-            </select>
+        <div class="sec4-in">
+          <div class="sec4-left">
+            <h1>BMI Calculator Chart</h1>
+            <table>
+              <thead>
+                <tr>
+                  <th>BMI</th>
+                  <th>Weight loss</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Below 18.5</td>
+                  <td>Underweight</td>
+                </tr>
+                <tr>
+                  <td>18.5-24.9</td>
+                  <td>Healthy</td>
+                </tr>
+                <tr>
+                  <td>25.0-29.9</td>
+                  <td>Overweight</td>
+                </tr>
+                <tr>
+                  <td>30.0-And above</td>
+                  <td>Obese</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-          <button class="btn">Calculate</button>
+          <div class="sec4-right">
+            <h1>Calculate Your BMI</h1>
+            <p>
+              We believe fitness should be accessible to everyone,everywhere
+              regardless of income or access to a gym. With hundreads of
+              professional workouts.
+            </p>
+            <div class="input">
+              <input type="text" name="Height" id="" placeholder="Height/cm" />
+              <input type="text" name="Weight" id="" placeholder="Weight/cm" />
+              <input type="number" name="Age" id="" placeholder="Age" />
+              <select name="Sex" id="">
+                <option value="Sex">Sex</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+                <option value="Other">Other</option>
+              </select>
+              <select name="Activity" id="">
+                <option value="">Select an activity factor</option>
+                <option value="">Less Active</option>
+                <option value="">Moderate Active</option>
+                <option value="">Super Active</option>
+              </select>
+            </div>
+            <button class="btn">Calculate</button>
+          </div>
         </div>
       </section>
       <div class="sec-5-title">
