--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             <h1>Calculate Your BMI</h1>
             <p>
               We believe fitness should be accessible to everyone,everywhere
-              regardless of income or access to a gym. With hundreads of
-              professional workouts.
+              regardless of income or access to a gym.
             </p>
             <div class="input">
               <input type="text" name="Height" id="" placeholder="Height/cm" />
@@ -147,7 +146,7 @@
                 <option value="Female">Female</option>
                 <option value="Other">Other</option>
               </select>
-              <select name="Activity" id="">
+              <select name="Activity" id="Activity">
                 <option value="">Select an activity factor</option>
                 <option value="">Less Active</option>
                 <option value="">Moderate Active</option>
