--- a/index.html
+++ b/index.html
@@ -93,6 +93,48 @@
         <img src="./images/run.jpg" alt="" />
       </section>
 
+
+      <section class="uniq-title sec-4-title" >
+        <h1>Eat Healthy</h1>
+        <p>
+          Healthy eating is one of the important things in fitness world , And we guide you to eat healthy and maintain your physic . Just watch our free healthy food recipes .
+        </p>
+      </section>
+
+      <section class="uniq">
+        <div class="recipe">
+          <img src="./images/healthy-1.jpg" alt="">
+          <h2>Recipe : 1</h2>
+          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+        </div>
+        <div class="recipe">
+          <img src="./images/healthy-2.jpg" alt="">
+          <h2>Recipe : 2</h2>
+          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+        </div>
+        <div class="recipe">
+          <img src="./images/halthy-3.jpg" alt="">
+          <h2>Recipe : 3</h2>
+          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+        </div>
+        <div class="recipe">
+          <img src="./images/healthy-4.jpg" alt="">
+          <h2>Recipe : 4</h2>
+          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+        </div>
+        <div class="recipe">
+          <img src="./images/healthy-5.jpg" alt="">
+          <h2>Recipe : 5</h2>
+          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+        </div>
+        <div class="recipe">
+          <img src="./images/healthy-6.jpg" alt="">
+          <h2>Recipe : 6</h2>
+          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+        </div>
+      </section>
+
+
       <div class="sec-4-title">
         <h1>BMI Calculator</h1>
         <p>
