--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-2</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
   </head>
   <body class="inter-font">
     <header>
       <section class="head">
         <h1>Fitness</h1>
+
+        <i class="fa-solid fa-bars" id="bar-icon" style="color: #ffffff;"></i>
         <nav>
           <ul>
             <li>Home</li>
@@ -23,8 +26,7 @@
         <div class="hero-1st">
           <h1>Get body in <span class="dancing-font" >Shape</span> & stay healthy</h1>
           <p>
-            A huge selection of health and fitness content , healthy recipes and
-            transformation stories to help you get fit and stay fit.
+            A wide range of wellness and fitness resources, nutritious recipes, and inspiring success stories to support your journey to a healthier, fitter you.
           </p>
           <button class="btn">Join Club Now!</button>
           <button class="btn-2nd">Download App</button>
@@ -36,7 +38,9 @@
           </div>
           <div class="short-2">
             <div class="dot">
-              <button></button>
+              <button>
+                <i class="fa-solid fa-play" id="play-button" style="color: #ffffff;"></i>
+              </button>
             </div>
             <div class="cont">
               <h1>350+</h1>
@@ -52,30 +56,29 @@
         <div class="sec2-title">
           <h1>Change Your Habits</h1>
           <p>
-            We believe fitness should be accessible to everyone,everywhere
-            regardless of income or access to a gym.
+            Changing habit is the first key to have a great fitness. We guide you to make good fitness habit .
           </p>
         </div>
         <div class="sec2-cards">
           <div class="card">
             <img src="./images/image 3.png" alt="" />
             <h2>Movement</h2>
-            <p>We believe fitness should be accessible to everyone</p>
+            <p>Fitness is all about moving your body </p>
           </div>
           <div class="card">
             <img src="./images/image 2.png" alt="" />
             <h2>Time</h2>
-            <p>We believe fitness should be accessible to everyone</p>
+            <p>Rearrange your routine and make time for exercise</p>
           </div>
           <div class="card">
             <img src="./images/image 4.png" alt="" />
             <h2>practice</h2>
-            <p>We believe fitness should be accessible to everyone</p>
+            <p>Practice makes a man perfect </p>
           </div>
           <div class="card">
             <img src="./images/image 5.png" alt="" />
             <h2>Weight loss</h2>
-            <p>We believe fitness should be accessible to everyone</p>
+            <p>Loss your weight and stay agile</p>
           </div>
         </div>
       </section>
@@ -84,9 +87,7 @@
         <div class="sec3-left">
           <h1>Run An Extra Mile Esily</h1>
           <p>
-            We believe fitness should be accessible to everyone,everywhere
-            regardless of income or access to a gym. With hundreads of
-            professional workouts.
+            In our busy life , its though to secure extra time to exercise daily . But we can easily run an extra mile every day . One extra mile for one day obviously can make our heart and body fit .
           </p>
           <button class="btn">Join Now</button>
         </div>
@@ -105,17 +106,17 @@
         <div class="recipe">
           <img src="./images/healthy-1.jpg" alt="">
           <h2>Recipe 1</h2>
-          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+          <p>Its a simple recipe made with some kind of meat slice and veges . You can add some chicken popcors to make it more protein rich !</p>
         </div>
         <div class="recipe">
           <img src="./images/healthy-2.jpg" alt="">
           <h2>Recipe 2</h2>
-          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+          <p>Its not a recipe but vegetable is the most healthy food on earth . soo add veges in your diet!</p>
         </div>
         <div class="recipe">
           <img src="./images/halthy-3.jpg" alt="">
           <h2>Recipe 3</h2>
-          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+          <p>Fruits are also a great source of calories and its a good source of dietary sugar and carbs !</p>
         </div>
         <div class="recipe">
           <img src="./images/healthy-4.jpg" alt="">
@@ -130,7 +131,7 @@
         <div class="recipe">
           <img src="./images/healthy-6.jpg" alt="">
           <h2>Recipe 6</h2>
-          <p>Its a simple recipe made with some vegetables slice and olive oil . You can add some chicken popcors to make it more protein rich !</p>
+          <p>Its a simple recipe made with some fruits slice and veges . You can add some chicken popcors to make it more protein rich !</p>
         </div>
       </section>
 
@@ -138,8 +139,7 @@
       <div class="sec-4-title">
         <h1>BMI Calculator</h1>
         <p>
-          We believe fitness should be accessible to everyone,everywhere
-          regardless of income or access to a gym.
+          It is important to know the numbers . Soo calculate you BMI and make notes . Its is important to look at very delicate changes .
         </p>
       </div>
 
@@ -177,8 +177,7 @@
           <div class="sec4-right">
             <h1>Calculate Your BMI</h1>
             <p>
-              We believe fitness should be accessible to everyone,everywhere
-              regardless of income or access to a gym.
+             Make sure you are providing accurate data . Note that it is not a medical grade BMI calculator 
             </p>
             <div class="input">
               <input type="text" name="Height" id="" placeholder="Height/cm" />
